feat: add transaction hash tracking and batch processing improvements

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@near-js/signers": "^2.3.3",
     "@near-js/tokens": "^2.3.3",
     "@near-js/transactions": "^2.3.3",
+    "@near-js/utils": "^2.3.3",
+    "bs58": "^6.0.0",
     "hono": "^4.9.9",
     "near-sandbox": "^0.2.0",
     "zod": "^4.1.11"
