feat: add OpenAPI documentation with Hono Swagger UI integrationAdd @hono/swagger-ui and @hono/zod-openapi dependencies. Migrate from basic Hono to OpenAPIHono with comprehensive API documentation including transfer endpoints, request/response schemas, and interactive Swagger UI interface.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@hono/swagger-ui": "^0.5.2",
+    "@hono/zod-openapi": "^1.1.3",
     "@near-js/accounts": "^2.3.3",
     "@near-js/crypto": "^2.3.3",
     "@near-js/providers": "^2.3.3",
