feat: add MAX_RETRIES configuration and update audit report with resolved issues

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ NEAR_RPC_URL=https://rpc.testnet.near.org
 NEAR_ACCOUNT_ID=jinakmerpati.testnet
 NEAR_CONTRACT_ID=jinakmerpati.testnet
 NEAR_PRIVATE_KEY=ed25519:
+MAX_RETRIES=5
