feat: add configurable database path with persistent storage option

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,12 @@ NEAR_PRIVATE_KEY=ed25519:
 # Must be a non-negative integer, max 100
 MAX_RETRIES=5
 
+# Optional: Database file path (default: :memory:)
+# Use ':memory:' for in-memory database (data is lost on restart)
+# Use a file path for persistent storage (e.g., './data/transfers.db')
+# Note: In production, you should use a file path for persistence
+DATABASE_PATH=:memory:
+
 # Optional: Node environment (development, production, test)
 # Default: development
 NODE_ENV=development
