feat: add testnet benchmark and refactor sandbox benchmark configuration

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "bun run src/index.ts --watch",
     "test:executor": "mkdir -p .tmp && TMPDIR=.tmp bun test tests/executor.test.ts",
     "bench:executor:sandbox": "mkdir -p .tmp && TMPDIR=.tmp bun run bench/executor-sandbox.bench.ts",
+    "bench:executor:testnet": "mkdir -p .tmp && TMPDIR=.tmp bun run bench/executor-testnet.bench.ts",
     "bench:queue": "mkdir -p .tmp && TMPDIR=.tmp bun run bench/queue.bench.ts"
   },
   "devDependencies": {
