--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@eclipseeer/near-api-ts": "^0.2.0",
     "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-openapi": "^1.1.3",
     "@near-js/accounts": "^2.3.3",
     "@near-js/crypto": "^2.3.3",
+    "@near-js/jsonrpc-types": "^1.4.0",
     "@near-js/providers": "^2.3.3",
     "@near-js/signers": "^2.3.3",
     "@near-js/tokens": "^2.3.3",
