feat: add configurable PORT environment variable and update test amounts

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ MAX_RETRIES=5
 # Note: In production, you should use a file path for persistence
 DATABASE_PATH=:memory:
 
+# Optional: Port for the HTTP server (default: 3000)
+# Must be a valid port number between 1 and 65535
+PORT=3000
+
 # Optional: Node environment (development, production, test)
 # Default: development
 NODE_ENV=development
