feat: add Docker containerization with nginx proxy and production configuration

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ MAX_RETRIES=5
 # Use ':memory:' for in-memory database (data is lost on restart)
 # Use a file path for persistent storage (e.g., './data/transfers.db')
 # Note: In production, you should use a file path for persistence
-DATABASE_PATH=:memory:
+DATABASE_PATH=/app/data/transfers.db
 
 # Optional: Port for the HTTP server (default: 3000)
 # Must be a valid port number between 1 and 65535
@@ -31,4 +31,4 @@ PORT=3000
 
 # Optional: Node environment (development, production, test)
 # Default: development
-NODE_ENV=development
+NODE_ENV=production
