--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   near-ft-service:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: near-ft-transfers
     restart: unless-stopped
     environment:
@@ -29,9 +31,8 @@ services:
     image: nginx:alpine
     container_name: near-ft-nginx
     restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
+    expose:
+      - "80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
