--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -12,7 +12,7 @@ server {
     listen 80;
     server_name localhost;
 
-    # Security headers
+    # Security headers (HTTP-only)
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
