feat: add transfer amount limits and validation configuration options

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,37 @@ MAX_RETRIES=5
 # Note: In production, you should use a file path for persistence
 DATABASE_PATH=/app/data/transfers.db
 
+# Transfer Amount Configuration
+# Optional: Minimum transfer amount in smallest token unit (default: 1)
+# Must be a non-negative integer (string format to handle large numbers)
+# Example: "1000000" for 1 token if token has 6 decimals
+MIN_TRANSFER_AMOUNT=1
+
+# Optional: Maximum transfer amount in smallest token unit (default: 1)
+# Must be a non-negative integer (string format to handle large numbers)
+# Example: "1000000000" for 1000 tokens if token has 6 decimals
+MAX_TRANSFER_AMOUNT=1
+
+# Validation Configuration
+# Optional: Skip account existence validation (default: false)
+# Set to 'true' to skip checking if recipient account exists on NEAR
+# WARNING: Not recommended for production - transfers to non-existent accounts will fail
+# Use this for performance optimization when you're sure accounts exist
+SKIP_ACCOUNT_EXISTENCE=false
+
+# Optional: Skip storage deposit validation (default: false)
+# Set to 'true' to skip checking if recipient has storage deposit registered on FT contract
+# WARNING: Not recommended for production - transfers to accounts without storage deposit will fail
+# Use this for performance optimization when you're sure accounts have storage deposit
+SKIP_STORAGE_CHECK=false
+
+# Server Configuration
+# Optional: Host for the HTTP server (default: 0.0.0.0)
+# Use "0.0.0.0" to bind to all interfaces (default, recommended for Docker)
+# Use "127.0.0.1" to bind to localhost only (recommended for development)
+# Use specific IP to bind to specific interface
+HOST=0.0.0.0
+
 # Optional: Port for the HTTP server (default: 3000)
 # Must be a valid port number between 1 and 65535
 PORT=3000
@@ -32,3 +63,20 @@ PORT=3000
 # Optional: Node environment (development, production, test)
 # Default: development
 NODE_ENV=production
+
+# Example Usage Scenarios:
+#
+# 1. Development (full validation, localhost):
+#    HOST=127.0.0.1 SKIP_ACCOUNT_EXISTENCE=false SKIP_STORAGE_CHECK=false
+#
+# 2. Production Docker (full validation, all interfaces):
+#    HOST=0.0.0.0 SKIP_ACCOUNT_EXISTENCE=false SKIP_STORAGE_CHECK=false
+#
+# 3. High Performance (skip account validation, assume accounts exist):
+#    HOST=0.0.0.0 SKIP_ACCOUNT_EXISTENCE=true SKIP_STORAGE_CHECK=false
+#
+# 4. Maximum Performance (skip all validation):
+#    HOST=0.0.0.0 SKIP_ACCOUNT_EXISTENCE=true SKIP_STORAGE_CHECK=true
+#
+# 5. Custom Amount Limits:
+#    MIN_TRANSFER_AMOUNT=1000 MAX_TRANSFER_AMOUNT=1000000
